Fixed glitch in header collapse

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -42,10 +42,10 @@ body {
     //margin-top: 0;
     //.transition(margin-top, 0.2s, ease);
     &.collapseHeader {
-        margin-top: -70px;
+        margin-top: -@heightOfHeader;
 
         #main-nav {
-            margin-top: -70px;
+            margin-top: -@heightOfHeader;
         }
 
         .itemPage header {
