--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -46,7 +46,7 @@
                 </ol>
             </div>
             <div class="create-class-wrapper" ng-if="cc.data.length !== 0">
-                <div class="text">Dont see your class? Create it.</div>
+                <div class="text">Don't see your class? Create it.</div>
                 <button type="button" class="create-class action-btn" ng-click="cc.goCreateClass()">@UniversityResources.OnboardingCreateClass</button>
             </div>
             <div class="empty-state" ng-if="cc.data.length === 0">
