--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -165,8 +165,8 @@
                     <md-icon md-svg-icon="t:alert"></md-icon>
                     <div class="text">@JsResources.unfollowClass</div>
                     <div class="buttons">
-                        <button ng-click="cd.close()" class="cancel-btn">No</button>
-                        <button ng-click="cd.remove()" class="action-btn">Yes</button>
+                        <button ng-click="cd.close()" class="cancel-btn">@JsResources.dialogCancel</button>
+                        <button ng-click="cd.remove()" class="action-btn">@JsResources.dialogOk</button>
                     </div>
                 </div>
             </md-dialog-content>
