--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/UploadDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/UploadDialog.cshtml
@@ -49,7 +49,7 @@
                             </button>
                         </div>
                     </div>
-                    <div ng-if="u.uploadStep === 1" id="dropElement" class="uploadFile text-center">
+                    <div ng-if="u.uploadStep === 1" id="dropElement" drop-file class="uploadFile text-center">
                         <div ng-hide="u.files.length">
                             <div>@IndexResources.DragHere</div>
                             <div class="buttons">
