--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
@@ -406,35 +406,13 @@ body.collapseHeader .title-strip {
   -webkit-transition: all 0.1s ease !important;
   transition: all 0.1s ease !important;
 }
-.class-choose .animate-repeat.ng-enter,
-.class-choose .animate-repeat.ng-leave {
-  -webkit-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
-  -moz-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
-  -ms-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
-  -o-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
-  transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
-  position: relative;
-  display: block;
-}
-.class-choose .animate-repeat.ng-enter.ng-enter-active,
-.class-choose .animate-repeat.ng-leave {
-  opacity: 1;
-  top: 0;
-  height: 72px;
-}
-.class-choose .animate-repeat.ng-leave.ng-leave-active,
-.class-choose .animate-repeat.ng-enter {
-  opacity: 0;
-  top: -100px;
-  height: 0px;
-}
 .class-choose .title {
   text-align: center;
   margin: 0 auto;
   width: 100%;
   display: block;
   font-size: 30px;
-  padding: 20px 10px 0 10px;
+  padding-top: 20px;
   font-weight: bold;
   color: #33076e;
 }
@@ -472,6 +450,10 @@ body.collapseHeader .title-strip {
 }
 .class-choose .top-container .wrapper {
   margin: 0 auto;
+}
+.class-choose .top-container .title {
+  padding-right: 10px;
+  padding-left: 10px;
 }
 .class-choose .top {
   display: -webkit-flex;
@@ -526,18 +508,18 @@ body.collapseHeader .title-strip {
   text-align: center;
   z-index: 1;
 }
-.class-choose .top #selected-classes button.ng-enter,
-.class-choose .top #selected-classes .empty.ng-enter {
-  transition: 0.5s linear all;
+.class-choose .top #selected-classes .icon.ng-enter {
+  transition: 1s linear all;
+  /*transition: 1s linear all;*/
   opacity: 0;
 }
-.class-choose .top #selected-classes button.ng-enter-stagger,
-.class-choose .top #selected-classes .empty.ng-enter-stagger {
-  transition-delay: 1s;
-  transition-duration: 0.5s;
+.class-choose .top #selected-classes .icon.ng-enter-stagger {
+  transition-delay: 0.1s;
+  transition-duration: 0s;
+  /*transition-delay: 0.3s;
+                    transition-duration: 0s;*/
 }
-.class-choose .top #selected-classes button.ng-enter.ng-enter-active,
-.class-choose .top #selected-classes .empty.ng-enter.ng-enter-active {
+.class-choose .top #selected-classes .icon.ng-enter.ng-enter-active {
   opacity: 1;
 }
 .class-choose .top #selected-classes,
