--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
@@ -751,6 +751,9 @@ body.collapseHeader .title-strip {
   margin-bottom: 8px;
   font-size: 16px;
 }
+.create-class-dialog {
+  width: 100%;
+}
 .md-toast-animating {
   overflow: auto !important;
 }
