--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -742,7 +742,9 @@ body.collapseHeader {
         top: 0;
     }*/
 }
-
+.create-class-dialog{
+    width:100%;
+}
 
 .md-toast-animating {
     overflow: auto !important;
