--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
@@ -619,6 +619,9 @@ body.collapseHeader .title-strip {
     -moz-column-count: 4;
     -webkit-column-count: 4;
     column-count: 4;
+    -moz-column-gap: 0;
+    -webkit-column-gap: 0;
+    column-gap: 0;
   }
 }
 .class-choose .results .closed-department .box-style {
@@ -670,6 +673,7 @@ body.collapseHeader .title-strip {
 .class-choose .results .department-courses li > button {
   width: 100%;
   padding: 0;
+  margin: 5px 0;
 }
 .class-choose .empty-state {
   width: 100%;
@@ -771,6 +775,7 @@ body.collapseHeader .title-strip {
 .selected-class-dialog md-dialog-content .data-wrapper .box-container {
   margin: 0 auto 10px auto;
   max-width: 300px;
+  width: 100%;
 }
 .selected-class-dialog md-dialog-content .data-wrapper .center {
   display: -webkit-flex;
@@ -812,6 +817,31 @@ body.collapseHeader .title-strip {
   max-width: 200px;
   margin: 0 auto;
 }
+.selected-class-dialog md-dialog-content .confirm,
+.selected-class-dialog md-dialog-content .data-wrapper {
+  min-height: 200px;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  flex-direction: column;
+  -webkit-align-items: stretch;
+  align-items: stretch;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+.selected-class-dialog md-dialog-content .confirm .content,
+.selected-class-dialog md-dialog-content .data-wrapper .content {
+  flex-grow: 1;
+  flex-shrink: 0;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  flex-direction: column;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
 .class-choose .slim.box-style .icon,
 body > .icon {
   width: 60px;
@@ -847,7 +877,6 @@ body > .cart-animated {
   align-items: stretch;
   -webkit-justify-content: flex-start;
   justify-content: flex-start;
-  margin: 10px 0;
 }
 .slim.box-style .icon {
   width: 60px;
