--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -455,24 +455,20 @@ body.collapseHeader {
                 z-index: 1;
             }
 
-            .icon {
+            /*.icon {
                 &.ng-enter {
-                    transition: 1s linear all;
-                    /*transition: 1s linear all;*/
                     opacity: 0;
                 }
 
                 &.ng-enter-stagger {
                     transition-delay: 0.1s;
                     transition-duration: 0s;
-                    /*transition-delay: 0.3s;
-                    transition-duration: 0s;*/
                 }
 
                 &.ng-enter.ng-enter-active {
                     opacity: 1;
                 }
-            }
+            }*/
         }
 
         #selected-classes, .search-form {
