--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
@@ -16,6 +16,8 @@
     margin-top: 10px;
     margin-bottom: 10px;
     background: @buttonColorBlue;
+    display: inline-block;
+    width: 100%;
 
     button.btn-default {
         &:active:hover {
@@ -38,7 +40,7 @@
         background: @backgroundColor;
     }
 
-    .overflow-container{
+    .overflow-container {
         overflow: hidden;
     }
 
@@ -403,8 +405,8 @@
             top: 0;
             position: absolute;
             right: 0;
-            padding: 7px 15px;
-            margin: 6px auto;
+            padding: 8px 15px;
+            margin: 0 auto;
 
             &:active:hover {
                 background: transparent;
