--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_Upload.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_Upload.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
-<div class="margin-bottom-20" ng-controller="UploadWrapper as u1" uib-collapse="!u1.open" expanding="u1.uploadOpen()"
+<div class="margin-bottom-20 upload-wrapper" ng-controller="UploadWrapper as u1" uib-collapse="!u1.open" expanding="u1.uploadOpen()"
      collapsed="u1.uploadCollapsed()" compile-html="u1.html">
 </div>
 @*TODO: we can bring that async as well - focus on feed bring that as well as upload click*@
