--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -5,8 +5,7 @@
     <div class="explore" @*ng-if="!cc.showCreateClass"*@>
         <div class="top-container">
             <div class="status-strip" ng-if="cc.selectedCoursesView.length ">
-                @*&& !cc.showCreateClass*@
-                <h2>@UniversityResources.ClassChooseYellowTitle1&nbsp;</h2><ng-pluralize count="cc.selectedCourses.length"
+                <h2>@UniversityResources.ClassChooseYellowTitle1&nbsp;</h2><ng-pluralize count="cc.selectedCoursesView.length"
                                                                                          when="{
                      'one': '1 @GeneralResources.Class,',
                      'other': '{} @GeneralResources.Classes,'}">
@@ -191,7 +190,7 @@
     </script>
 
     <script defer type="text/ng-template" id="slim-box-template.html">
-        <div class="icon background" color="{{::department.id}}" ng-bind="::e.name.substr(0,2) | lowercase"></div>
+        <div class="icon background" color="{{::department.id}}" ng-bind="::(e.twoLetter || e.name.substr(0,2) | lowercase)"></div>
         <div class="data">
             <div class="details">
                 <h5 class="name ellipsis" dir="auto" color="{{::department.id}}" ng-bind="::e.name" title="{{::e.name}}"></h5>
